# VTB_API_hack2022

./: .dockerignore  .gitignore  .gitmodules  README.md  docker-compose.yml
api_emulator/: pyproject.toml  setup.cfg  start_all.py
api_emulator/app_1/: main.py  models.py
api_emulator/app_10/: main.py  models.py
api_emulator/app_11/: main.py  models.py
api_emulator/app_12/: main.py  models.py
api_emulator/app_13/: main.py  models.py
api_emulator/app_14/: main.py  models.py
api_emulator/app_2/: main.py  models.py
api_emulator/app_3/: main.py  models.py
api_emulator/app_4/: main.py  models.py
api_emulator/app_5/: main.py  models.py
api_emulator/app_6/: main.py  models.py
api_emulator/app_7/: main.py  models.py
api_emulator/app_8/: main.py  models.py
api_emulator/app_9/: main.py  models.py
api_emulator/common/: factories.py  models.py
api_history_module/: README.MD  api_call_task.py  api_sender.py  mongo_worker.py  pyproject.toml  settings.py
backend/: .gitignore  pyproject.toml  setup.cfg
backend/app/: config.py  main.py
backend/app/database/: __init__.py  api.py  page.py  user.py  version.py
backend/app/routers/: __init__.py  api.py  auth.py  page.py  user.py
backend/app/schemes/: __init__.py  auth.py  base.py  page.py  user.py
backend/app/services/: auth.py  page.py  schema_uploader.py
compose/api_emulator/: Dockerfile
compose/api_history_module/: Dockerfile
compose/backend/: Dockerfile
compose/frontend/: Dockerfile
compose/fuzzer/: Dockerfile
compose/nginx/: Dockerfile  foxhound.conf  nginx.conf
experiment/backend/: install.sh
experiment/backend/backend/: settings.py  urls.py
experiment/backend/fuzzing/: models.py  tasks.py  views.py
experiment/experiment/: package-lock.json  package.json
experiment/experiment/src/: App.vue  main.js
experiment/frontend/: package-lock.json  package.json
experiment/frontend/src/: App.vue
frontend/: package-lock.json  package.json  tsconfig.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue  code_gen.ts  constants.ts  examplesGenerator.ts  http.ts  main.ts
fuzzer/backend/: Dockerfile  db.sqlite3  docker-compose.yml  install.sh  openapi8012.json  requirements.txt  swagger_test.json  test.http
fuzzer/frontend/: package-lock.json  package.json
(+110 files in other folders)
