[tool.poetry]
name = "vtp-api"
version = "0.1.0"
description = ""
authors = ["y.romanchuk <y.romanchuk@bi.zone>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi-code-generator = "^0.3.5"
fastapi = "^0.85.0"
pydantic-factories = "^1.9.0"
requests = "^2.28.1"
pydantic = {extras = ["email"], version = "^1.10.2"}
uvicorn = "^0.18.3"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py39"]
exclude = '''
/(
    \.git
  | \.venv(.*)
  | venv
  | migrations
)/
'''

[tool.isort]
line_length = 120
skip_glob = [".venv*", "venv*", "migrations", "versions"]
# add for black compatible, more info: https://black.readthedocs.io/en/stable/the_black_code_style.html
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
