[tool.poetry]
name = "api-history-module"
version = "0.1.0"
description = ""
authors = ["Mist0ne"]
readme = "README.md"
packages = [{include = "api_history_module"}]

[tool.poetry.dependencies]
python = "^3.7"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
celery = "^5.2.7"
gevent = "^22.8.0"
requests = "^2.28.1"
pymongo = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
